<resources>
    <string name="app_name">Happy Weight</string>

    <!-- Login -->
    <string name="username">Email Address</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnForgotPass">Forgot Password</string>

    <!-- Registration -->
    <string name="regFirstName">First Name</string>
    <string name="regLastName">Last Name</string>
    <string name="regConfirmPassword">Confirm Password</string>
    <string name="btnRegister">Create Account</string>
    <string name="btnBacktoLogin">Back to Login</string>

    <!-- Menu -->
    <string name="optLogout">Logout</string>
    <string name="optSettings">Settings</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <!-- Add/Edit Weight Record -->
    <string name="wt_add_btnAdd">Add</string>
    <string name="wt_add_btnEdit">Edit</string>
    <string name="wt_add_btnCancel">Cancel</string>
    <string name="wt_add_chooseWeight">Enter your Weight</string>
    <string name="wt_add_chooseDate">Choose a Date</string>

    <!-- Grid Layout -->
    <string name="wt_tile_lbs">lbs</string>

    <!-- Deleting Record -->
    <string name="deleting_record">Deleting Record</string>

    <!-- Logging Out -->
    <string name="logging_out">Logging Out …</string>

    <!-- Weight Tracker -->
    <string name="btn_weight_tracker">Weight Tracker</string>
    <string name="bottom_nav_weight_tracker">Weight Tracker</string>
    <string name="wt_trk_btnAddWeight">add weight</string>


    <!-- Weight Overview -->
    <string name="bottom_nav_overview">Overview</string>
    <string name="wt_ov_set_goal">Set Goal</string>
    <string name="lbl_weight_goal">Weight Goal:</string>
    <string name="wtgoalstub">wtGoalStub</string>
    <string name="btnSMSChange"><u>CHANGE</u></string>
    <string name="SMS_ON">ON</string>
    <string name="SMS_OFF">OFF</string>
    <string name="goal_not_set">Not Set</string>

    <!-- Settings -->
    <string name="enable_sms_notification">Enable SMS for Goal Weight Reached</string>
    <string name="hint_sms_notification">Send SMS notification when goal weight reached</string>
    <string name="permission_not_granted">SMS Notification permission not granted</string>
    <string name="sms_enabled">Enabled</string>
    <string name="sms_disabled">Disabled</string>
    <string name="sms_notifications">SMS Notifications:</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="save_settings">Save Settings</string>


</resources>
